[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tilda-vitals"
version = "0.1.0"
description = "Утилита для улучшения LCP на сайтах Tilda"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "requests>=2.31",
    "pydantic>=2.0",
]

[project.scripts]
tilda-vitals = "tilda_vitals.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tilda_vitals*"]
